--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     </head>
     <body>
         <div id="map-canvas"></div>
+        <div id="map-controls">
+            <button class="map-control" id="control-undo">Undo Point</button>
+            <button class="map-control" id="control-reset">Reset Route</button>
+        </div>
+        <script type="text/javascript" src="js/zepto.min.js"></script>
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=drawing,geometry&key=AIzaSyBnv0oH25dRlGd-Q8YbVMv0BDklyBuUZOI&sensor=false"></script>
         <script type="text/javascript" src="js/app.js"></script>
   </body>
