Adds underscore.js for convenience. Gets directions and updates when new segments are added.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <button class="map-control" id="control-reset">Reset</button>
         </div>
         <script type="text/javascript" src="js/zepto.min.js"></script>
+        <script type="text/javascript" src="js/underscore.min.js"></script>
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=drawing,geometry&key=AIzaSyBnv0oH25dRlGd-Q8YbVMv0BDklyBuUZOI&sensor=false"></script>
         <script type="text/javascript" src="js/app.js"></script>
   </body>
