--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             </div>
             <div class="panel route">
                 <h3 class="panel-heading">Route</h3>
-                <p>From <span id="origin"></span> to <span id="destination"></span></p>
-                <p>Total: <span id="totalDistance"></span>, <span id="totalDuration"></span></p>
+                <p><span id="origin"></span> to <span id="destination"></span></p>
+                <p><span id="totalDistance"></span> <span id="totalDuration"></span></p>
                 <div id="directions"></div>
             </div>
             <div class="panel elevation">
