Reduces API calls by only calculating directions when user explicitly completes the route by clicking the Finish Route button.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <div id="canvas"></div>
         <div id="panels">
             <div class="panel controls">
-                <button class="control" id="control-undo">Undo last step</button>
-                <button class="control" id="control-reset">Reset</button>
+                <button class="control" id="control-finish">Finish Route</button>
+                <button class="control" id="control-undo">Step Back</button>
+                <button class="control" id="control-reset">Reset Route</button>
             </div>
             <div class="panel route">
                 <h3 class="panel-heading">Route</h3>
