Move generated text out of markup.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
             </div>
             <div class="panel route">
                 <h3 class="panel-heading">Route</h3>
-                <p><span id="origin"></span> to <span id="destination"></span></p>
-                <p><span id="totalDistance"></span> <span id="totalDuration"></span></p>
-                <div id="directions"></div>
+                <div id="route-overview"></div>
+                <div id="route-directions"></div>
             </div>
             <div class="panel elevation">
                 <h3 class="panel-heading">Profile</h3>
