Calculates and prints total ascent, total descent, and net elevation change for the route.

--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
                 <div id="route-directions"></div>
             </div>
             <div class="panel elevation">
-                <h3 class="panel-heading">Profile</h3>
+                <h3 class="panel-heading">Elevation Profile</h3>
+                <div id="elevation-overview"></div>
+                <div id="elevation-profile"></div>
+            </div>
+            <div class="panel weather">
+                <h3 class="panel-heading">Weather &amp; Wind</h3>
                 <p>@todo</p>
             </div>
             <div class="panel services">
-                <h3 class="panel-heading">Services</h3>
-                <p>@todo</p>
-            </div>
-            <div class="panel weather">
-                <h3 class="panel-heading">Weather</h3>
+                <h3 class="panel-heading">Roadside Services</h3>
                 <p>@todo</p>
             </div>
         </div>
