Weather Underground API integration. Displays hourly forecasts for the next 12 hours.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="panel weather">
                 <h3 class="panel-heading">Weather &amp; Wind</h3>
-                <p>@todo</p>
+                <div id="weather-hourly"></div>
             </div>
             <div class="panel services">
                 <h3 class="panel-heading">Roadside Services</h3>
