Verbiage and logging cleanup.

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <body>
         <div id="canvas"></div>
         <div id="controls">
-            <button class="control" id="control-finish">Finish Route</button>
+            <button class="control" id="control-finish">Get Directions &amp; Conditions</button>
             <button class="control" id="control-undo">Step Back</button>
             <button class="control" id="control-reset">Reset Route</button>
         </div>
         <div id="elevation">
             <h3 class="inset-heading">Elevation</h3>
             <div class="inset-content">
-                <div id="elevation-overview">Click 'Finish Route' to show the elevation changes for your ride.</div>
+                <div id="elevation-overview">Click 'Get Directions &amp; Conditions' to show the elevation changes for your ride.</div>
                 <div id="elevation-profile" class="todo">@todo elevation profile</div>
             </div>
         </div>
         <div id="results">
             <div class="panel route">
                 <h3 class="panel-heading">
-                    Route
+                    Directions
                     <div class="modes">
                         <button class="mode" id="mode-distance-imperial">Feet</button>
                         <button class="mode" id="mode-distance-metric">Meters</button>
@@ -32,7 +32,7 @@
                 </h3>
                 <div class="panel-content">
                     <div id="route-overview"></div>
-                    <div id="route-directions">Click 'Finish Route' to generate turn-by-turn directions.</div>
+                    <div id="route-directions">Click 'Get Directions &amp; Conditions' to generate turn-by-turn directions.</div>
                 </div>
             </div>
             <div class="panel weather">
@@ -44,7 +44,7 @@
                     </div>
                 </h3>
                 <div class="panel-content">
-                    <div id="weather-hourly">Click 'Finish Route' to show the weather forecast for your ride.</div>
+                    <div id="weather-hourly">Click 'Get Directions &amp; Conditions' to show the weather forecast for your ride.</div>
                 </div>
             </div>
             <div class="panel services">
