Scaffolding and research for drawing elevation profile using D3.js.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h3 class="inset-heading">Elevation</h3>
             <div class="inset-content">
                 <div id="elevation-overview">Click 'Get Directions &amp; Conditions' to show the elevation changes for your ride.</div>
-                <div id="elevation-profile" class="todo">@todo elevation profile</div>
+                <div id="elevation-profile"></div>
             </div>
         </div>
         <div id="results">
