Drawing elevation data! Still very buggy - horizontal and vertical scaling broken.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div id="elevation">
             <h3 class="inset-heading">Elevation</h3>
             <div class="inset-content">
-                <div id="elevation-overview">Click 'Get Directions &amp; Conditions' to show the elevation changes for your ride.</div>
                 <div id="elevation-profile"></div>
+                <div id="elevation-overview">Click 'Get Directions &amp; Conditions' to show the elevation changes for your ride.</div>
             </div>
         </div>
         <div id="results">
@@ -58,6 +58,7 @@
         </div>
         <script type="text/javascript" src="js/zepto.min.js"></script>
         <script type="text/javascript" src="js/underscore.min.js"></script>
+        <script type="text/javascript" src="js/d3.min.js"></script>
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=drawing,geometry&key=AIzaSyBnv0oH25dRlGd-Q8YbVMv0BDklyBuUZOI&sensor=false"></script>
         <script type="text/javascript" src="js/app.js"></script>
   </body>
